# RAG-IA-Act

./: .gitignore  CONTRIBUTING.md  README.md  app.py  inspect_db.py  pyproject.toml  requirements.txt
.github/instructions/: instructions-IA.instructions.md
docs/: decision-technique-bilingue.md  guide-rag-stephane-robert.md  résultats-test.md  test-report.md  tests-à-faire.md
src/: config.py  explore_vectordb.py  generator.py  ingest.py  query_translator.py  retriever.py
tests/manual/: battery_benchmark.py  expansion_validation.py  quick_validation.py  single_question_debug.py
