[project]
name = "rag-ia-act"
version = "1.0.0"
description = "Systeme RAG bilingue pour interroger l'IA Act europeen avec Ollama, LangChain et ChromaDB"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Mai-L" }
]
dependencies = [
  "langchain==0.3.27",
  "langchain-community==0.3.27",
  "langchain-ollama==0.3.8",
  "langchain-chroma==0.2.6",
  "chromadb==1.0.20",
  "streamlit==1.50.0",
  "pypdf==6.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5"
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["tests"]
norecursedirs = ["tests/manual"]
